# poetry_exp

./: pyproject.toml
hello/scripts/: say_hello.py  whoareu.py
