[tool.poetry]
name = "poetry-1"
version = "0.1.0"
description = ""
authors = ["OLVOS <<anhkrem@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
colorama = "^0.4.6"
ipython = "^8.17.2"
flake8 = "^6.1.0"


[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"
whoareu = "hello.scripts.whoareu:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
